@@ -72,7 +72,7 @@ L["Show Recommended Zones"] = "Zeige empfohlene Zonen"
 L["Show zone Dungeons"] = "Zeige Instanzen dieser Zone"
 L["Toggle Datatexts"] = "Zeige/Verstecke Infotexte"
 L["Toggle WorldMap"] = "Weltkarte anzeigen/verstecken"
-L["Truncates the text rather than auto enlarge the location panel when the text is bigger than the panel."] = "Truncates the text rather than auto enlarge the location panel when the text is bigger than the panel." -- Requires localization
+L["Truncates the text rather than auto enlarge the location panel when the text is bigger than the panel."] = true
 L["Truncate text"] = "Eingerückter Text"
 L["Update Timer"] = "Aktualisierungstimer"
 L["Use Custom Location Color"] = "Benutzerdefinierte Standort-Farbe verwenden"
